@@ -43,23 +43,6 @@ cd ../..
 REGEX="../extras/regex/regex.o"
 ])
 
-openssl=no
-AC_DEFUN(AC_ENABLE_SSL, 
-[
-if test "$openssl" = "yes"; then
-AC_DEFINE(USE_SSL)
-AC_CACHE_CHECK(what order we should supply the SSL libraries in, ac_cv_ssl_libs, [
-save_libs="$LIBS"
-LIBS="$LIBS -lssl -lcrypto -lssl"
-AC_TRY_LINK([#include <openssl/ssl.h>], [
-SSL_write(NULL, NULL, NULL);
-], ac_cv_ssl_libs="-lssl -lcrypto -lssl" LIBS="$save_libs", ac_cv_ssl_libs="-lssl -lcrypto -lssl" LIBS="$save_libs")])
-CRYPTOLIB="$ac_cv_ssl_libs"
-CFLAGS="$CFLAGS -I/usr/local/include -I/usr/local/ssl/include -L/usr/local/lib -L/usr/local/ssl/lib"
-else
-AC_WARN(SSL support could not be enabled because openssl/ssl.h could not be found)
-fi
-])
 dnl module checking based on Hyb7's module checking code
 AC_DEFUN(AC_ENABLE_DYN,
 [
@@ -342,7 +325,8 @@ AC_ARG_WITH(spath, [ --with-spath     Specify the location of the executable],
 AC_DEFINE_UNQUOTED(SPATH,"$withval") BINDIR="$withval",AC_DEFINE_UNQUOTED(SPATH,"`pwd`/src/ircd") BINDIR="`pwd`/src/ircd")
 AC_ARG_ENABLE(nospoof, [ --enable-nospoof     Enable spoofing protection], AC_DEFINE(NOSPOOF))
 AC_ARG_ENABLE(hub, [ --enable-hub     Compile as a hub server], AC_DEFINE(HUB))
-AC_ARG_ENABLE(ssl, [ --enable-ssl     Enable client and server SSL connections ], AC_ENABLE_SSL)
+CHECK_SSL
+CHECK_ZLIB
 AC_ARG_ENABLE(dynamic-linking, [ --enable-dynamic-linking     Make the IRCd dynamically link shared objects rather than statically ], AC_ENABLE_DYN, AC_DEFINE(STATIC_LINKING))
 AC_ARG_ENABLE(inet6, [ --enable-inet6     Make the IRCd support IPv6 ], AC_ENABLE_INET6)
 AC_ARG_ENABLE(standardthreads, [ --enable-standardthreads     Use standard threads ], USESTDTHREAD="1")
